--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
       <button id="mute-btn" aria-label="mute">🔊</button>
 
       <div id="start-screen">
-        <img id="start-bg" src="images/start-bg.jpg" alt="start background" />
-        <img id="logo" src="images/logo.png" alt="logo" />
+        <img id="start-bg" src="start-bg.jpg" alt="start background" />
+        <img id="logo" src="logo.png" alt="logo" />
         <p class="best-score-start">Best Score: <span id="best-score-start">0</span></p>
 
         <button id="play-btn">PLAY</button>
@@ -47,7 +47,7 @@
       <div id="timer">30</div>
 <!-- WINNER POPUP -->
 <div id="winner-popup" class="popup hidden">
-    <img class="popup-logo" src="images/logo.png">
+    <img class="popup-logo" src="logo.png">
     <h1>You Win!</h1>
     <p>Your Score: <span id="final-score">0</span></p>
     <p>Best Score: <span id="best-score-win">0</span></p>
@@ -56,7 +56,7 @@
 
 <!-- GAME OVER POPUP -->
 <div id="gameover-popup" class="popup hidden">
-    <img class="popup-logo" src="images/logo.png">
+    <img class="popup-logo" src="logo.png">
     <h1>Game Over</h1>
     <p>Your Score: <span id="gameover-score">0</span></p>
     <p>Best Score: <span id="best-score-lose">0</span></p>
@@ -69,9 +69,9 @@
     </div>
 
     <!-- AUDIO (will be controlled via JS) -->
-    <audio id="bg-music" src="sounds/music.mp3" loop preload="auto"></audio>
-    <audio id="sfx-collect" src="sounds/collect.mp3" preload="auto"></audio>
-    <audio id="sfx-hit" src="sounds/hit.mp3" preload="auto"></audio>
+    <audio id="bg-music" src="music.mp3" loop preload="auto"></audio>
+    <audio id="sfx-collect" src="collect.mp3" preload="auto"></audio>
+    <audio id="sfx-hit" src="hit.mp3" preload="auto"></audio>
 
     <script src="game.js"></script>
   </body>
